[package]
name = "lob"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = "1.0.96"
prost = { version = "^0.13", optional = true }
tonic = { version = "^0.12", optional = true }
codec = { package = "parity-scale-codec", version = "3.5.0", features = [
    "derive",
], optional = true }

[features]
default = ["serde", "grpc", "codec"]
grpc = ["prost", "tonic"]
event = []
event-id = ["event"]
event-symbol = ["event"]
event-time = ["event"]


[build-dependencies]
tonic-build = "^0.12"
